--- a/style.css
+++ b/style.css
@@ -1,16 +1,23 @@
+*,
+*::after,
+*::before {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 html {
-    height: 100%;
+	font-size: calc(8px + 0.390625vw);
+	font-family: 'Orbitron', sans-serif;
 }
 
 body {
-    height: 100%;
+    min-height: 100vh;
     padding: 0;
     margin: 0;
 
     background: linear-gradient(to bottom right, #222, #0f0f0f);
     background-repeat: no-repeat;
-
-    font-family: 'Orbitron', sans-serif;
 
     display: flex;
     align-items: center;
@@ -27,11 +34,11 @@ body {
                                     supported by Chrome, Edge, Opera and Firefox */
 }
 
-table, th, td {
+td {
     border: 1px solid #000;
 }
 
-#GameBoard {    
+#GameBoard {
     table-layout: fixed;
     background-color: #222;
     border-collapse: collapse;
@@ -46,7 +53,7 @@ table, th, td {
 
 #Icon {
     flex: 1 0 33%;
-    font-size: 30px;   
+    font-size: 2rem;   
     color: #f5f5f5;
     text-align: center;
 }
@@ -66,7 +73,7 @@ table, th, td {
     color: #f5f5f5;
     font-weight: 900;
     text-align: center;
-    font-size: 18px;
+    font-size: 1.2rem;
     padding: 5px;
 }
 
@@ -106,18 +113,14 @@ table, th, td {
 
     background: #222;
     border: 1px solid #888;
-    width: 700px;
 }
 
 .slidecontainer {
-    width: 100%; /* Width of the outside container */
     padding: 20px;
-    box-sizing: border-box;
 }
 
 .slidecontainer label {
     color: #f5f5f5;
-    font-size: 17px;
 }
 
 
